2.1.0/_sources/gallery/units/bar_unit_demo.rst.txt


.. _sphx_glr_gallery_units_bar_unit_demo.py:


=========================
Group barchart with units
=========================

This is the same example as :doc:`the barchart demo<../api/barchart>`
in centimeters.

.. only:: builder_html

   This example requires :download:`basic_units.py <basic_units.py>`




.. image:: /gallery/units/images/sphx_glr_bar_unit_demo_001.png
    :align: center





.. code-block:: python


    import numpy as np
    from basic_units import cm, inch
    import matplotlib.pyplot as plt


    N = 5
    menMeans = (150*cm, 160*cm, 146*cm, 172*cm, 155*cm)
    menStd = (20*cm, 30*cm, 32*cm, 10*cm, 20*cm)

    fig, ax = plt.subplots()

    ind = np.arange(N)    # the x locations for the groups
    width = 0.35         # the width of the bars
    p1 = ax.bar(ind, menMeans, width, color='r', bottom=0*cm, yerr=menStd)


    womenMeans = (145*cm, 149*cm, 172*cm, 165*cm, 200*cm)
    womenStd = (30*cm, 25*cm, 20*cm, 31*cm, 22*cm)
    p2 = ax.bar(ind + width, womenMeans, width,
                color='y', bottom=0*cm, yerr=womenStd)

    ax.set_title('Scores by group and gender')
    ax.set_xticks(ind + width / 2)
    ax.set_xticklabels(('G1', 'G2', 'G3', 'G4', 'G5'))

    ax.legend((p1[0], p2[0]), ('Men', 'Women'))
    ax.yaxis.set_units(inch)
    ax.autoscale_view()

    plt.show()

**Total running time of the script:** ( 0 minutes  0.030 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: bar_unit_demo.py <bar_unit_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: bar_unit_demo.ipynb <bar_unit_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
